--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3787,7 +3787,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 #com-first {
-    background: url(../../images/communication-booth.png) 100% 100% fixed;
+    background: url(../../images/com-first.png) 100% 100% fixed;
 }
 
 #carto-phone {
