--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3616,7 +3616,7 @@ footer p a {
     margin-left: 0px;
     min-height: 30em;
     border: none;
-    padding: 3em;
+    padding: 1em 3em;
     opacity: 0.9;
 }
 
