--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -1198,6 +1198,43 @@ header #st-logo img {
     transform: scaleX(1);
 }
 
+
+.offre1 .hvr-sweep-to-right:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.offre1 .hvr-sweep-to-right:hover,
+.hvr-sweep-to-right:focus,
+.hvr-sweep-to-right:active {
+    color: #ffffff;
+    background: -webkit-linear-gradient(left, #2E4054, #456A93 100%);
+    background: linear-gradient(to right, #2E4054, #456A93 100%);
+    border-color: #456B93;
+}
+
+.offre1 .hvr-sweep-to-right:hover:before,
+.hvr-sweep-to-right:focus:before,
+.hvr-sweep-to-right:active:before {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
 /* 10. Skills Section
 --------------------------------- */
 .skills-section {
@@ -1369,7 +1406,7 @@ header #st-logo img {
 }
 
 .offre1 {
-    height: 30em;
+    height: 35em;
     padding: 2em;
     width: 33%;
     display: inline-block;
@@ -4431,9 +4468,17 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     font-size: 30px;
 }
 
-#offres > div > div.col-lg-12.service-content > div > div:nth-child(1) > div > button {
+#offres > div > div.col-lg-12.service-content > div > div:nth-child(1) > div > a > button {
   margin-top: -85px;
+  width: 220px;
+  height: 50px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  color: #ffffff;
+  font-size: 24px;
 }
+
 
 #offres > div > div.col-md-12.service-content {
 
@@ -4441,10 +4486,24 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
   margin-bottom: 3px;
 }
 
-#offres > div > div.col-lg-12.service-content > div > div:nth-child(2) > div > button {
+#offres > div > div.col-lg-12.service-content > div > div:nth-child(2) > div > a > button {
   margin-top: -85px;
+  width: 220px;
+  height: 50px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  color: #ffffff;
+  font-size: 24px;
 }
 
-#offres > div > div.col-lg-12.service-content > div > div:nth-child(3) > div > button {
+#offres > div > div.col-lg-12.service-content > div > div:nth-child(3) > div > a > button {
   margin-top: -85px;
+  width: 220px;
+  height: 50px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  color: #ffffff;
+  font-size: 24px;
 }
