--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3702,7 +3702,7 @@ footer p a {
 }
 
 .communication {
-    background: url(../../images/communication-booth.png) no-repeat 50% 50% fixed;
+    background: url(../../images/loyalty.jpeg) no-repeat 50% 50% fixed;
     padding-top: 9%;
     height: 45em;
 }
