--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -1430,7 +1430,7 @@ header #st-logo img {
 
 .contact-content {
     text-align: center;
-    padding: 10px 70px;
+    padding: 6em 70px;
     overflow: auto;
 }
 
