--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -655,6 +655,8 @@ header #st-logo img {
 .our-work-section .portfolio-images {
     height: 100%;
     padding: 0;
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
 }
 
 .our-work-section .portfolio-images .col-md-3 {
@@ -1094,6 +1096,7 @@ header #st-logo img {
 
 /* 9. Call To Action Section
 --------------------------------- */
+
 .call-to-section {
     height: auto;
     width: 100%;
@@ -3986,6 +3989,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 #our-work > div > div > div.col-md-12.see-work {
   height: 9em;
   padding: 3em 0;
+  border-top: 4px solid black;
 }
 
 #hero > div.container-fluid > div > div > div.hero-logo > img {
