--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -10,6 +10,7 @@
 .about-icons li .icon .material-icons,
 .about-text h2 span,
 .quote-bottom .container h3 span,
+.service-bottom .container h3 span,
 .service-headline h2 span,
 .service-headline p span,
 .service-content p,
