--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -4645,5 +4645,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 #services{
-  height: 685px;
+  height: 657px;
+  padding-left: 11px;
 }
